fixed positioning of education on profile to be visible

--- a/app/assets/stylesheets/components/profile.scss
+++ b/app/assets/stylesheets/components/profile.scss
@@ -1,3 +1,3 @@
-.profile-edu {
+.edu-index {
     margin-top: 30%;
 }
